duh. fix typo in John Albin's name.

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-This is a neat Colloquy theme based on John Alin's Succinct theme.
+This is a neat Colloquy theme based on John Albin's Succinct theme.
 
 It shows images inline. It also plays WAV and MP3 files by embedding 
 them inline (overuse at your own risk!).
